--- a/portfolio skola new/Styles/styles_body.css
+++ b/portfolio skola new/Styles/styles_body.css
@@ -1,6 +1,6 @@
 body{
     background-color: #0b2b26;
-    height: 500vb;
+    height: 400vb;
 }
 
 /* první strana */
@@ -244,7 +244,7 @@ body{
   border: 2px solid rgba(224, 184, 51, 1);
   border-radius: 50%;
   margin-left: 1265px;
-  margin-top: -195px;
+  margin-top: -160px;
 }
 
 .circle2 {
@@ -254,7 +254,7 @@ body{
   border: 2px solid rgba(224, 184, 51, 1);
   border-radius: 50%;
   margin-left: 1265px;
-  margin-top: 67px;
+  margin-top: 55px;
 }
 
 .circle3 {
@@ -264,7 +264,7 @@ body{
   border: 2px solid rgba(224, 184, 51, 1);
   border-radius: 50%;
   margin-left: 1266px;
-  margin-top: 70px;
+  margin-top: 55px;
 }
     
 .circle4 {
@@ -274,7 +274,7 @@ body{
   border: 2px solid rgba(224, 184, 51, 1);
   border-radius: 50%;
   margin-left: 1490px;
-  margin-top: -70px;
+  margin-top: -75px;
  
 }
 
@@ -283,77 +283,179 @@ body{
 .box{
   background-color:rgba(224, 184, 51, 1) ;
   width:2px;
-  height: 80px;
+  height: 145px;
   margin-left: 1271px;
-  margin-top: -110px ;
-}
-
-.box2{
-  background-color:rgba(224, 184, 51, 1) ;
-  width:2px;
-  height: 85px;
-  margin-left: 1271px;
- 
+  margin-top: -86px ;
 }
 
 
-.container {
-      display: flex;
-      justify-content: space-between;
-      padding: 70px;
-      flex-wrap: wrap;
-    }
 
-    .section {
-      flex: 1;
-      min-width: 400px;
-      padding: 20px;
-      box-sizing: border-box;
-      text-align: center;
-    }
+.d-section {
+  justify-content: space-between;
+  display: flex;
+  padding: 70px;
+  margin-left: -850px;
+  margin-top: -75px;
+}
 
-    .section h2 {
-      font-size: 55px;
-      margin-top: 600px;
-      font-family: Bagel;
-     color: #f5f5f5;
-    }
+.section-text {
+  flex: 1;
+  min-width: 400px;
+  padding: 20px;
+  box-sizing: border-box;
+  text-align: center;
+}
 
-    .section p {
-      font-size: 14px;
-      font-family: sans-serif;
-      font-weight: 300;
-      margin-bottom: 30px;
-      color: #f5f5f5;
-    }
+.section-text h2 {
+font-size: 55px;
+ margin-top: 550px;
+ font-family: Bagel;
+ color: #f5f5f5;
+}
 
-    .cards-vertical {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-    }
+.section-text p {
+font-size: 11px;
+font-family: sans-serif;
+font-weight: 300;
+margin-bottom: 10px;
+color: #f5f5f5;
+}
 
-    .cards-vertical .card {
-      width: 200px;
-      height: 260px;
-      background-color: rgb(0, 0, 0);
-      border-radius: 0px;
-    }
+.cards-vertical {
+display: flex;
+justify-content: center;
+gap: 20px;
+margin-top: 100px;
+}
 
-    .cards-horizontal {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 20px;
-    }
+.cards-vertical .card {
+width: 200px;
+height: 260px;
+background-color: rgb(0, 0, 0);
+border-radius: 0px;
 
-    .cards-horizontal .card {
-      width: 240px;
-      height: 60px;
-      background-color: white;
-      border-radius: 4px;
-    }
+}
 
+.web-section{
+  margin-top: -633px;
+  margin-left: 1150px;
+}
+.web-section img{
+  margin-left: 160px;
+}
+
+.web-title{
+  font-family: Bagel;
+  font-size: 55px;
+  color: #f5f5f5;
+  padding-left: 70px;
+}
+
+.web-post{
+  font-size: 11px;
+  color: #f5f5f5;
+  text-align: center;
+  margin-top: 50px;
+  padding-right: 230px;
+}
+
+
+  .box-web{
+    background-color:#000000;
+    width: 500px;
+    height: 500px;
+   margin-top: -100px;
+  }
+
+    .tag-yellow3{
+    border-radius: 30px;
+    background-color: #0b2b26;
+    color: #ffffff;
+    font-family: Inria;
+    font-size:15px ;
+    width: 85px;
+    height: 20px;
+    padding: 3px;
+    padding-left: 25px;
+   margin-top: -350px;
+   margin-left: 430px;
+  }
+
+   .tag-yellow4{
+    border-radius: 30px;
+    background: #0b2b26;
+    color: #ffffff;
+    font-family: Inria;
+    font-size:15px ;
+    width: 75px;
+    height: 20px;
+    padding: 3px;
+    padding-left: 25px;
+   margin-top: 50px;
+   margin-left: 30px;
+  }
+
+
+.background-box {
+   background-color: #ffffff;
+    height: 1000px;
+    margin-top: 340px;
+    
+}
+
+.language-card {
+  background-color: #ddb325;
+  padding: 40px 60px;
+  text-align: center;
+  max-width: 400px;
+  margin-left: 250px;
+  margin-top: -850px;
+}
+
+.language-card h1 {
+  font-size: 36px;
+  font-weight: bold;
+  font-family: Bagel;
+  margin-bottom: 50px;
+}
+
+.language-section {
+  display: flex;
+  justify-content: space-around;
+  margin-bottom: 50px;
+}
+
+.language-item h2 {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: Bagel;
+  margin-bottom: 5px;
+}
+
+.language-item p {
+  font-size: 14px;
+  color: #333;
+}
+
+.hobby-section{
+ margin-left: 900px;
+ margin-top: -360px;
+  
+}
+
+.hobby-img-columns{
+ display: flex;
+    justify-content: center;
+    gap: 3rem;
+    flex-wrap: wrap; 
+}
+
+.hobby-section h1{
+  font-family: Bagel;
+  font-size: 50px;
+  margin-bottom: 150px;
+  margin-left: 350px;
+}
 
 
 
