--- a/portfolio skola new/Styles/styles_click1.css
+++ b/portfolio skola new/Styles/styles_click1.css
@@ -55,7 +55,7 @@ a{
     bottom: -2px;
     width: 100%;
     height: 2px;
-    background-color:#daf1de ;
+    background-color: #0B2B26;
     transform: scaleX(0);
     transform-origin: right;
     transition: transform .5s;
